--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
             </div>
         </section>
     </main>
+    <section class="git" style="font-size: 40px; text-align: center;">
+        <h1>Test git</h1>
+    </section>
 </body>
 </html>
