--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container"> 
             <nav>
-                <p>NAVIGATION</p>
+                <p>SAN</p>
             </nav>
         </div>
     </header>
