--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div>
-                            <p>SUB-HEADER</p>
+                            <p>Test</p>
                         </div>
                        
                     </div>
